# construction_site

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
config/: settings.py  urls.py
construction/: forms.py  models.py  urls.py  views.py
construction/migrations/: 0001_initial.py
construction/templates/construction/: index.html
nginx/: nginx.conf
ssl/: certificate.crt  private.key
static/css/: main.css  styles.css
static/js/: custom-scripts.js
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
